[gd_scene load_steps=5 format=2]

[ext_resource path="res://ubuntu-font-family/MM2Font_Small.tres" type="DynamicFont" id=1]
[ext_resource path="res://Screens/ScreenCutscene/Backgrounds/17xh-Networld.png" type="Texture" id=2]
[ext_resource path="res://ubuntu-font-family/BitmapFont.tscn" type="PackedScene" id=3]
[ext_resource path="res://Screens/ScreenNetConnect/ScreenNetConnect.gd" type="Script" id=4]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
stretch_mode = 7

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -574.0
margin_top = -198.0
margin_right = 574.0
margin_bottom = 198.0

[node name="HBoxNetServer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1148.0
margin_bottom = 41.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxNetServer"]
margin_top = 3.0
margin_right = 174.0
margin_bottom = 38.0
custom_fonts/font = ExtResource( 1 )
text = "Port: "

[node name="SpinBoxHostPort" type="SpinBox" parent="VBoxContainer/HBoxNetServer"]
margin_left = 178.0
margin_right = 478.0
margin_bottom = 41.0
rect_min_size = Vector2( 300, 0 )
max_value = 65535.0

[node name="Control" type="Control" parent="VBoxContainer/HBoxNetServer"]
margin_left = 482.0
margin_right = 502.0
margin_bottom = 41.0
rect_min_size = Vector2( 20, 0 )

[node name="ButtonHost" type="Button" parent="VBoxContainer/HBoxNetServer"]
margin_left = 506.0
margin_right = 1148.0
margin_bottom = 41.0
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 1 )
text = "Host"

[node name="Label2" type="Label" parent="VBoxContainer"]
visible = false
margin_top = 111.0
margin_right = 1148.0
margin_bottom = 125.0
text = "Your ip addresses might be:"

[node name="Control" type="Control" parent="VBoxContainer"]
margin_top = 45.0
margin_right = 1148.0
margin_bottom = 115.0
rect_min_size = Vector2( 0, 70 )

[node name="Label" type="Label" parent="VBoxContainer"]
margin_top = 119.0
margin_right = 1148.0
margin_bottom = 154.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 3
custom_constants/shadow_as_outline = 5
custom_fonts/font = ExtResource( 1 )
text = "Or enter an address below:"
align = 1
autowrap = true

[node name="HBoxNetClient" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 158.0
margin_right = 1148.0
margin_bottom = 199.0

[node name="TextEditClientDestination" type="TextEdit" parent="VBoxContainer/HBoxNetClient"]
margin_right = 892.0
margin_bottom = 41.0
rect_min_size = Vector2( 0, 30 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ButtonClientConnect" type="Button" parent="VBoxContainer/HBoxNetClient"]
margin_left = 896.0
margin_right = 1148.0
margin_bottom = 41.0
grow_vertical = 2
size_flags_vertical = 3
custom_fonts/font = ExtResource( 1 )
text = "Connect"

[node name="Control2" type="Control" parent="VBoxContainer"]
margin_top = 203.0
margin_right = 1148.0
margin_bottom = 273.0
rect_min_size = Vector2( 0, 70 )

[node name="LabelNetServerStatus" type="Label" parent="VBoxContainer"]
margin_top = 277.0
margin_right = 1148.0
margin_bottom = 312.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 3
custom_constants/shadow_as_outline = 5
custom_fonts/font = ExtResource( 1 )
text = "status: inactive"
align = 1
autowrap = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="BitmapFont" parent="." instance=ExtResource( 3 )]
visible = false
position = Vector2( 12, 673 )
text = "y: start or stop music"
wrap_at = 500
scale_by = 5

[connection signal="pressed" from="VBoxContainer/HBoxNetServer/ButtonHost" to="." method="_on_ButtonHost_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxNetClient/ButtonClientConnect" to="." method="_on_ButtonClientConnect_pressed"]
